using react-photo-widget-factory

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -4,6 +4,8 @@
 	<!--<link rel="stylesheet" href="example.css">-->
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<link href="article-image-box.css"  rel='stylesheet' type='text/css' />
+	<link href="mfb.min.css"  rel='stylesheet' type='text/css' />
+	<link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel='stylesheet' type='text/css' />
 	<link href='https://fonts.googleapis.com/css?family=Courgette|Great+Vibes|Patrick+Hand|Indie+Flower|Lobster|Poiret+One|Press+Start+2P|Open+Sans:400,700,700italic,400italic|Roboto:400,400italic,700,700italic|Lato:400,700italic,400italic,700|Oswald:400,700|Slabo+27px'  rel='stylesheet' type='text/css'>
 </head>
 <body>
