support for flexbox rendering

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
 	<title>HtmlPagesRenderer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 	<!--<link rel="stylesheet" href="example.css">-->
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="https://assets.pinterest.com/sdk/sdk.js"></script>
@@ -10,6 +11,7 @@
 	<link href="mfb.min.css"  rel='stylesheet' type='text/css' />
 
 	<link href="react-joyride.css" rel='stylesheet' type="text/css">
+	<link href="react-flexr.css" rel='stylesheet' type="text/css">
 	<link href="example.css" rel='stylesheet' type='text/css' />
 
 	<link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel='stylesheet' type='text/css' />	
