bindingSchema converter supported, transformation BackgroundContainers + widgets (InputRange)

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,28 +1,34 @@
 <!doctype html>
-<head>
-	<title>HtmlPagesRenderer</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-	<!--<link rel="stylesheet" href="example.css">-->
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="https://assets.pinterest.com/sdk/sdk.js"></script>
-	<!-- Latest compiled and minified CSS -->
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
-	<link href="article-image-box.css"  rel='stylesheet' type='text/css' />
-	<link href="mfb.min.css"  rel='stylesheet' type='text/css' />
-
-	<link href="react-joyride.css" rel='stylesheet' type="text/css">
-	<link href="react-flexr.css" rel='stylesheet' type="text/css">
-	<link href="example.css" rel='stylesheet' type='text/css' />
-
-	<link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel='stylesheet' type='text/css' />	
-	<link href='https://fonts.googleapis.com/css?family=Courgette|Great+Vibes|Patrick+Hand|Indie+Flower|Lobster|Poiret+One|Press+Start+2P|Open+Sans:400,700,700italic,400italic|Roboto:400,400italic,700,700italic|Lato:400,700italic,400italic,700|Oswald:400,700|Slabo+27px'  rel='stylesheet' type='text/css'>
-	
-</head>
-<body>
-	
-	<div id="app"></div>
+	<html>	
+		<head>
+			<title>HtmlPagesRenderer</title>
+			<!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">-->
+			<!--<meta name="viewport" content="width=device-width">-->
+			
+			<!--<link rel="stylesheet" href="example.css">-->
+			<script src="bower_components/jquery/dist/jquery.min.js"></script>
+			<script src="https://assets.pinterest.com/sdk/sdk.js"></script>
+			<!-- Latest compiled and minified CSS -->
+			<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
+			<link href="article-image-box.css"  rel='stylesheet' type='text/css' />
+			<link href="mfb.min.css"  rel='stylesheet' type='text/css' />
 		
-	<script src="common.js"></script>
-	<script src="bundle.js"></script>
-	<script src="example.js"></script>
-</body>
+			<link href="react-joyride.css" rel='stylesheet' type="text/css">
+			<link href="react-flexr.css" rel='stylesheet' type="text/css">
+			<link href="react-input-range.css" rel='stylesheet' type="text/css">
+			<link href="example.css" rel='stylesheet' type='text/css' />
+		
+			<link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel='stylesheet' type='text/css' />	
+			<link href='https://fonts.googleapis.com/css?family=Courgette|Great+Vibes|Patrick+Hand|Indie+Flower|Lobster|Poiret+One|Press+Start+2P|Open+Sans:400,700,700italic,400italic|Roboto:400,400italic,700,700italic|Lato:400,700italic,400italic,700|Oswald:400,700|Slabo+27px'  rel='stylesheet' type='text/css'>
+			
+		</head>
+		<body>
+			
+			<div id="app"></div>
+				
+			<script src="common.js"></script>
+			<script src="bundle.js"></script>
+			<script src="example.js"></script>
+		</body>
+	</html>
+
